deployment/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  namespace: web
  labels:
    app: tripviewer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer-pod
  template:
    metadata:
      labels:
        app: tripviewer-pod
    spec:
      containers:
      - name: tripviewer
        image: registrytzs2899.azurecr.io/tripviewer:0.0.1
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    app: tripviewer-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
