deployment/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
  labels:
    app: user-java-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java-pod
  template:
    metadata:
      labels:
        app: user-java-pod
    spec:
      containers:
        - name: user-java
          image: registrytzs2899.azurecr.io/user-java:v0.0.1
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /api/user-java/healthcheck
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /api/user-java/healthcheck
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  selector:
    app: user-java-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
