deployment/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: api
  labels:
    app: userprofile-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: userprofile-pod
  template:
    metadata:
      labels:
        app: userprofile-pod
    spec:
      containers:
      - name: userprofile
        image: registrytzs2899.azurecr.io/userprofile:v0.0.1
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /api/user/healthcheck
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /api/user/healthcheck
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  selector:
    app: userprofile-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
